--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:paddingLeft="5dp"
         android:textColor="#00665E"
-        android:textSize="25dp"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:id="@+id/admin"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:paddingTop="5dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#00665E"
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
@@ -38,7 +38,7 @@
         android:paddingTop="5dp"
         android:textSize="15dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="10dp"
         android:layout_alignParentEnd="true"
         android:textColor="#00665E"/>
 
