--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -1,5 +1,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent" android:dividerHeight="0dp"
-    android:background="#33CEC3" tools:context="ua.teampush.appteampush.MyRooms_Fragment" />
+    android:layout_height="match_parent"
+    android:choiceMode="singleChoice"
+    android:divider="#009D91"
+    android:dividerHeight="3dp"
+    android:background="#D8F8F8"
+    tools:context="ua.teampush.appteampush.MyRooms_Fragment" />
